# game_of_life

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
pkg/: game_of_life.d.ts  game_of_life.js  game_of_life_bg.d.ts  game_of_life_bg.wasm  package-lock.json  package.json
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
